# arkiv-sdk-rust

./: .editorconfig  Cargo.toml  README.md  crates.js  flake.nix  help.html  settings.html
.github/workflows/: demo.yml
arkiv_sdk/: fn.keccak256.html  index.html  struct.Address.html  struct.Signature.html  struct.Url.html
arkiv_sdk/client/: struct.ArkivClient.html  struct.ArkivClientBuilder.html  struct.ArkivRoClientBuilder.html
arkiv_sdk/entity/: index.html  sidebar-items.js  struct.Annotation.html  struct.ArkivTransaction.html  struct.ArkivTransactionBuilder.html  struct.Create.html  struct.DeleteResult.html  struct.EncodableArkivTransaction.html  struct.Entity.html  struct.EntityResult.html  struct.ExtendResult.html  struct.TransactionResult.html  type.Key.html  type.NumericAnnotation.html  type.StringAnnotation.html
arkiv_sdk/eth/: constant.STORAGE_ADDRESS.html  index.html  sidebar-items.js
arkiv_sdk/events/: enum.Event.html  struct.EventsClient.html
arkiv_sdk/rpc/: enum.Error.html  index.html  struct.EntityMetaData.html  struct.SearchResult.html
arkiv_sdk/utils/: fn.wei_to_eth.html  index.html
arkiv_sdk_demo/: all.html  fn.main.html
arkiv_test_utils/: all.html  constant.ARKIV_URL.html  constant.TEST_TTL.html  fn.get_client.html
demo/: Cargo.toml
demo/src/: main.rs
litepaper-patch-1/arkiv_sdk/: all.html  index.html
rvdp/release/: src-files.js
src/: client.rs  entity.rs  eth.rs  events.rs  lib.rs  rpc.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs
tests/: test_entity_operations.rs  test_events.rs  test_query.rs
(+100 files in other folders)
