[package]
name = "arkiv-sdk-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
arkiv-sdk = { workspace = true }
dirs = "6.0"
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
