[package]
name = "arkiv-test-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.0.24", features = [
  "provider-ws",
  "json-rpc",
  "signer-keystore",
] }
anyhow = "1.0"
arkiv-sdk = { workspace = true }
bigdecimal = "0.4"
dirs = "6.0.0"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.4"
